wip: revamping account management

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -245,7 +245,7 @@
   "next_block": "Следващ блок",
   "no": "Не",
   "no_messages_available": "Няма налични съобщения.",
-  "no_public_key_activate": "Този акаунт все още не е активиран. Щракнете, за да активирате и защитите вашия акаунт.",
+  "no_public_key_activate": "Този акаунт не е безопасен. Кликнете, за да защитите акаунта си.",
   "no_public_key_warning": "Внимание!: Вашият акаунт няма публичен ключ! Това означава, че не е толкова защитен, колкото другите акаунти. Моля, активирайте акаунта си, за да получите вашия публичен ключ.",
   "no_transactions_yet": "Все още няма транзакции.",
   "node_hint_no_multiout": "Не се поддържат многостранни плащания",
@@ -519,5 +519,9 @@
   "view": "Да видиш",
   "view_alias": "Преглед на псевдоним",
   "recipient_required": "Изисква се получател",
-  "unregistered_address": "Нерегистриран адрес"
+  "unregistered_address": "Нерегистриран адрес",
+  "account_offline": "Само за гледане",
+  "account_safe": "безопасно",
+  "account_unsafe": "опасно!",
+  "error_connection_fail": "Не може да се свърже с възел. Изглежда, че не е достъпно. Моля, изберете друг"
 }
