--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -245,7 +245,7 @@
   "next_block": "Επόμενο μπλοκ",
   "no": "Οχι",
   "no_messages_available": "Δεν υπάρχουν διαθέσιμα μηνύματα.",
-  "no_public_key_activate": "Αυτός ο λογαριασμός δεν έχει ενεργοποιηθεί ακόμα. Κάντε κλικ για ενεργοποίηση και προστασία του λογαριασμού σας.",
+  "no_public_key_activate": "Αυτός ο λογαριασμός δεν είναι ασφαλής. Κάντε κλικ για να ασφαλίσετε τον λογαριασμό σας.",
   "no_public_key_warning": "Προειδοποίηση !: Ο λογαριασμός σας δεν διαθέτει δημόσιο κλειδί! Αυτό σημαίνει ότι δεν προστατεύεται τόσο με άλλους λογαριασμούς. Ενεργοποιήστε τον λογαριασμό σας για να αποκτήσετε το δημόσιο κλειδί σας.",
   "no_transactions_yet": "Δεν υπάρχουν ακόμη συναλλαγές.",
   "node_hint_no_multiout": "Δεν υποστηρίζονται πληρωμές πολλαπλών εξόδων",
@@ -519,5 +519,9 @@
   "view": "Για να δω",
   "view_alias": "Δείτε το Alias",
   "recipient_required": "Απαιτείται ο παραλήπτης",
-  "unregistered_address": "Μη καταχωρημένη διεύθυνση"
+  "unregistered_address": "Μη καταχωρημένη διεύθυνση",
+  "account_offline": "Παρακολουθήστε μόνο",
+  "account_safe": "Ασφαλής",
+  "account_unsafe": "Επισφαλής!",
+  "error_connection_fail": "Δεν ήταν δυνατή η σύνδεση σε έναν κόμβο. Φαίνεται ότι δεν είναι προσβάσιμο. Παρακαλώ επιλέξτε άλλο"
 }
