--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -117,7 +117,8 @@
   "decimals": "Decimals",
   "decrypt": "Decrypt",
   "define_your_pin": "Define your PIN",
-  "delete": "Delete",
+  "delete": "Remove",
+  "delete_selected": "Remove Selected",
   "delisted": "Delisted",
   "delivered": "Delivered",
   "delivery_deadline": "Delivery Deadline",
@@ -138,6 +139,7 @@
   "enter_pin": "Enter PIN",
   "error": "Error",
   "error_alias": "The alias does not exist.",
+  "error_connection_fail": "Could not connect to a node. Seems that it's not reachable. Please, choose another one",
   "error_alias_not_for_sale": "This alias is no longer for sale.",
   "error_alias_not_from_recipient": "Alias is owned by account other than recipient.",
   "error_alias_not_from_sender": "Alias doesn't belong to sender.",
@@ -222,6 +224,9 @@
   "group": "Group",
   "header": "Header",
   "height": "Height",
+  "account_offline": "Watch",
+  "account_unsafe": "Unsafe!",
+  "account_safe": "Safe",
   "hint_offline_account": "You are watching this account",
   "hint_online_account": "You can execute transactions with this account",
   "host": "Host",
@@ -262,7 +267,7 @@
   "next_block": "Next Block",
   "no": "No",
   "no_messages_available": "No messages available.",
-  "no_public_key_activate": "This account is not activated yet. Click to activate and secure your account.",
+  "no_public_key_activate": "This account is not safe. Click to secure your account. ",
   "no_public_key_warning": "Warning!: Your account does not have a public key! This means it's not as protected as other accounts. Please activate your account to obtain your public key.",
   "no_transactions_yet": "No transactions yet.",
   "node_hint_no_multiout": "No multiout payments supported",
