--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -245,7 +245,7 @@
   "next_block": "अगला ब्लॉक",
   "no": "नहीं न",
   "no_messages_available": "कोई संदेश उपलब्ध नहीं है।",
-  "no_public_key_activate": "यह खाता अभी तक सक्रिय नहीं है। अपने खाते को सक्रिय और सुरक्षित करने के लिए क्लिक करें।",
+  "no_public_key_activate": "यह खाता सुरक्षित नहीं है। अपना खाता सुरक्षित करने के लिए क्लिक करें।",
   "no_public_key_warning": "चेतावनी!: आपके खाते में सार्वजनिक कुंजी नहीं है! इसका मतलब है कि यह अन्य खातों की तरह सुरक्षित नहीं है। अपनी सार्वजनिक कुंजी प्राप्त करने के लिए कृपया अपना खाता सक्रिय करें।",
   "no_transactions_yet": "अभी तक कोई लेनदेन नहीं।",
   "node_hint_no_multiout": "कोई बहु-भुगतान समर्थित नहीं है",
@@ -519,5 +519,9 @@
   "view": "देखना",
   "view_alias": "उपनाम देखें",
   "recipient_required": "प्राप्तकर्ता आवश्यक है",
-  "unregistered_address": "अपंजीकृत पता"
+  "unregistered_address": "अपंजीकृत पता",
+  "account_offline": "केवल देखें",
+  "account_safe": "सुरक्षित",
+  "account_unsafe": "असुरक्षित!",
+  "error_connection_fail": "एक नोड से कनेक्ट नहीं हो सका। ऐसा लगता है कि यह पहुंच योग्य नहीं है। कृपया कोई और चुनें"
 }
