--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -245,7 +245,7 @@
   "next_block": "Следующий блок",
   "no": "Нет",
   "no_messages_available": "Нет доступных сообщений.",
-  "no_public_key_activate": "Этот аккаунт еще не активирован. Нажмите, чтобы активировать и защитить свою учетную запись.",
+  "no_public_key_activate": "Этот аккаунт небезопасен. Нажмите, чтобы защитить свою учетную запись.",
   "no_public_key_warning": "Внимание! У вашей учетной записи нет публичного ключа! Это означает, что он не так защищен, как другие аккаунты. Пожалуйста, активируйте свою учетную запись, чтобы получить публичный ключ.",
   "no_transactions_yet": "Транзакций пока нет.",
   "node_hint_no_multiout": "Мульти платежи не поддерживаются",
@@ -519,5 +519,9 @@
   "view": "Увидеть",
   "view_alias": "Посмотреть псевдоним",
   "recipient_required": "Требуется получатель",
-  "unregistered_address": "Незарегистрированный адрес"
+  "unregistered_address": "Незарегистрированный адрес",
+  "account_offline": "Только смотреть",
+  "account_safe": "Безопасно",
+  "account_unsafe": "Небезопасно!",
+  "error_connection_fail": "Не удалось подключиться к узлу. Кажется, что это недоступно. Пожалуйста, выберите другой"
 }
