--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -245,7 +245,7 @@
   "next_block": "Следећи блок",
   "no": "Не",
   "no_messages_available": "Нема доступних порука.",
-  "no_public_key_activate": "Овај налог још увек није активиран. Кликните да бисте активирали и заштитили свој налог.",
+  "no_public_key_activate": "Овај налог није безбедан. Кликните да бисте заштитили свој налог.",
   "no_public_key_warning": "Упозорење!: Ваш налог нема јавни кључ! То значи да није толико заштићен као други налози. Молимо вас да активирате свој рачун да бисте добили свој јавни кључ.",
   "no_transactions_yet": "Још нема трансакција.",
   "node_hint_no_multiout": "Нису подржана вишеструка плаћања",
@@ -519,5 +519,9 @@
   "view": "Видети",
   "view_alias": "Виев Алиас",
   "recipient_required": "Прималац је обавезан",
-  "unregistered_address": "Нерегистрована адреса"
+  "unregistered_address": "Нерегистрована адреса",
+  "account_offline": "Ватцх Онли",
+  "account_safe": "Сафе",
+  "account_unsafe": "Небезбедно!",
+  "error_connection_fail": "Повезивање са чвором није успело. Чини се да није доступно. Молим вас, изаберите другу"
 }
