--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -245,7 +245,7 @@
   "next_block": "Наступний блок",
   "no": "Немає",
   "no_messages_available": "Повідомлень немає.",
-  "no_public_key_activate": "Цей рахунок ще не активовано. Натисніть, щоб активувати та захистити свій рахунок.",
+  "no_public_key_activate": "Цей обліковий запис небезпечний. Натисніть, щоб захистити свій обліковий запис.",
   "no_public_key_warning": "Увага: Ваш акаунт не має відкритого ключа! Це означає, що він не настільки захищений, як інші облікові записи. Будь ласка, активуйте свій рахунок, щоб отримати свій відкритий ключ.",
   "no_transactions_yet": "Поки що транзакцій немає.",
   "node_hint_no_multiout": "Не підтримуються багатоплатові платежі",
@@ -519,5 +519,9 @@
   "view": "Бачити",
   "view_alias": "Переглянути псевдонім",
   "recipient_required": "Потрібен одержувач",
-  "unregistered_address": "Незареєстрована адреса"
+  "unregistered_address": "Незареєстрована адреса",
+  "account_offline": "Дивитися тільки",
+  "account_safe": "Сейф",
+  "account_unsafe": "Небезпечно!",
+  "error_connection_fail": "Не вдалося підключитися до вузла. Здається, що це недоступно. Будь ласка, виберіть інший"
 }
