--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -245,7 +245,7 @@
   "next_block": "Următorul bloc",
   "no": "Nu",
   "no_messages_available": "Nu sunt mesaje disponibile.",
-  "no_public_key_activate": "Acest cont nu este activat încă. Faceți clic pentru a vă activa și securiza contul.",
+  "no_public_key_activate": "Acest cont nu este sigur. Faceți clic pentru a vă securiza contul.",
   "no_public_key_warning": "Atenție !: Contul dvs. nu are o cheie publică! Aceasta înseamnă că nu este la fel de protejat ca alte conturi. Vă rugăm să vă activați contul pentru a obține cheia dvs. publică.",
   "no_transactions_yet": "Nici o tranzacție încă.",
   "node_hint_no_multiout": "Nu sunt acceptate plăți multiple",
@@ -519,5 +519,9 @@
   "view": "A vedea",
   "view_alias": "Vedeți Alias",
   "recipient_required": "Destinatarul este necesar",
-  "unregistered_address": "Adresă neînregistrată"
+  "unregistered_address": "Adresă neînregistrată",
+  "account_offline": "Numai ceas",
+  "account_safe": "Sigur",
+  "account_unsafe": "Nesigur!",
+  "error_connection_fail": "Nu s-a putut conecta la un nod. Se pare că nu este accesibil. Vă rog, alegeți altul"
 }
